--- a/src/app/user/shopping-cart/shopping-cart.html
+++ b/src/app/user/shopping-cart/shopping-cart.html
@@ -45,7 +45,7 @@
           <span>Total</span>
           <span>{{ total | number:'1.2-2' }} ฿</span>
         </div>
-        <button class="checkout-btn">Proceed to Checkout</button>
+        <button class="checkout-btn" (click)="proceedToCheckout()">Proceed to Checkout</button>
       </div>
     </div>
   </div>
