--- a/src/app/user/game-details/game-details.html
+++ b/src/app/user/game-details/game-details.html
@@ -1,12 +1,12 @@
-<div class="details-container">
+<div *ngIf="game$ | async as game" class="details-container">
   <section class="main-info">
     <div class="game-image-container">
-      <img [src]="game.imageUrl" [alt]="game.title" class="game-image">
+      <img [src]="game.image_url" [alt]="game.name" class="game-image">
     </div>
     <div class="game-info">
-      <h1 class="game-title">{{ game.title }}</h1>
-      <p class="game-price">฿ {{ game.price }}</p>
-      <p class="game-genre">{{ game.genre }}</p>
+      <h1 class="game-title">{{ game.name }}</h1>
+      <p class="game-price">฿ {{ game.price | number:'1.2-2' }}</p>
+      <p class="game-genre">{{ game.genre_name }}</p>
       <div class="actions">
         <button class="btn btn-add">🛒 Add to Cart</button>
         <button class="btn btn-buy">Buy Now !!</button>
@@ -24,11 +24,11 @@
     <div class="details-table">
       <div class="detail-item">
         <span class="detail-key">Release Date</span>
-        <span class="detail-value">{{ game.releaseDate }}</span>
+        <span class="detail-value">{{ game.release_date | date:'longDate' }}</span>
       </div>
       <div class="detail-item">
         <span class="detail-key">Best Seller Rank</span>
-        <span class="detail-value">{{ game.bestSellerRank }}</span>
+        <span class="detail-value">{{ game.rank_position ? '#' + game.rank_position : 'N/A' }}</span>
       </div>
     </div>
   </section>
