--- a/src/app/user/shop/shop.html
+++ b/src/app/user/shop/shop.html
@@ -13,24 +13,25 @@
   </div>
 
   <div class="game-grid">
-  <a
-    *ngFor="let game of filtered"
-    [routerLink]="['/game-details', game.id]"
-    class="game-card-link"
-  >
-    <div class="game-card">
-      <img [src]="game.imageUrl" [alt]="game.title" class="game-image" />
-      <div class="card-content">
-        <h3 class="game-title">{{ game.title }}</h3>
-        <p class="game-genre">{{ game.game_type }}</p>
-        <p class="game-price">{{ game.price | number : '1.2-2' }} THB</p>
-        
-        <div class="button-group">
-          <button class="btn-add" (click)="addToCart(game, $event)">ADD</button>
-          <button class="btn-buy" (click)="buyNow(game, $event)">BUY</button>
-        </div>
-        </div>
-    </div>
-  </a>
-</div>
+    <a *ngFor="let game of filtered" [routerLink]="['/game-details', game.id]" class="game-card-link">
+      <div class="game-card">
+        <img [src]="game.imageUrl" [alt]="game.title" class="game-image" />
+        <div class="card-content">
+          <h3 class="game-title">{{ game.title }}</h3>
+          <p class="game-genre">{{ game.game_type }}</p>
+          <p class="game-price">{{ game.price | number : '1.2-2' }} THB</p>
+          
+          <div *ngIf="!game.isOwned; else inLibrary" class="button-group">
+            <button class="btn-add" (click)="addToCart(game, $event)">ADD</button>
+            <button class="btn-buy" (click)="buyNow(game, $event)">BUY</button>
+          </div>
+
+          <ng-template #inLibrary>
+            <div class="owned-badge">IN LIBRARY</div>
+          </ng-template>
+
+          </div>
+      </div>
+    </a>
+  </div>
 </div>
