--- a/src/app/user/game-details/game-details.scss
+++ b/src/app/user/game-details/game-details.scss
@@ -119,4 +119,20 @@ $card-bg: #141852;
       font-weight: 600;
     }
   }
+  .btn-play {
+  background-color: #2ecc71;
+  border: none;
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+  padding: 10px 24px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.btn-play:hover {
+  background-color: #27ae60;
+  transform: translateY(-1px);
+}
 }
